# asm-interpreter

./: CMakeLists.txt  binary_ops.cpp  binary_ops.h  instructions.cpp  instructions.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  math_ops.cpp  math_ops.h  registers.cpp  registers.h  test.asm  tokenizer.cpp  tokenizer.h  type.h  variables.cpp  variables.h
